# java-llama.cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  49be664_24918e4.md  CHAT_INTEGRATION_SUMMARY.md  CLAUDE.md  CLAUDE_TEST_GENERATION_PROMPT.md  CMakeLists.txt  README.md  REFACTORING.md  REFACTORING_2.md  llama-cpp.patch.md  migrate_junit.py  pom.xml
.claude/commands/: find-cpp-duplication.md
.github/: FUNDING.yml  build.bat  build.sh  build_cuda_linux.sh  build_opencl_android.sh  dependabot.yml  sign-fatjars.sh  validate-models.bat  validate-models.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/dockcross/: dockcross-android-arm  dockcross-android-arm64  dockcross-linux-arm64-lts  dockcross-manylinux2014-x64  dockcross-manylinux_2_28-x64  update.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  osv-scanner.yml  publish.yml  release.yaml  reuse.yml  scorecard.yml
cmake/: copy_dll_files.cmake
docs/history/: 49be664_open_issues.md  llama-cpp-breaking-changes.md
llama/: CMakeLists.txt
llama/src/main/java/net/ladenthin/llama/value/: LlamaCppVersion.java
src/main/cpp/: jllama.cpp  jllama.h  jni_helpers.hpp  jni_server_helpers.hpp  json_helpers.hpp  server.hpp  utils.hpp
src/main/cpp/compat/: ggml_x86_compat.c
src/main/java/de/kherud/llama/: InferenceParameters.java  JsonParameters.java  LlamaIterable.java  LlamaIterator.java  LlamaLoader.java  LlamaModel.java  LlamaOutput.java  ModelMeta.java  ModelParameters.java  OSInfo.java  StopReason.java
src/main/java/de/kherud/llama/args/: CacheType.java  CliArg.java  GpuSplitMode.java  MiroStat.java  ModelFlag.java  NumaStrategy.java  PoolingType.java  ReasoningFormat.java  RopeScalingType.java  Sampler.java
src/main/java/de/kherud/llama/json/: ChatResponseParser.java  CompletionResponseParser.java  ParameterJsonSerializer.java  RerankResponseParser.java
src/main/java/net/ladenthin/llama/: AndroidSignatureIgnore.java  CancellationToken.java  ChatMessage.java  CliParameters.java  InferenceParameters.java  JsonParameters.java  LlamaException.java  LlamaIterable.java  LlamaIterator.java  LlamaLoader.java  LlamaModel.java  LlamaOutput.java  LlamaSystemProperties.java  LogLevel.java  Logger.java  LoggerFactory.java  ModelMeta.java  ModelParameters.java  OSInfo.java  Pair.java  ProcessRunner.java  ServerMetrics.java  Session.java  StopReason.java  Timings.java  TokenLogprob.java  Usage.java
src/main/java/net/ladenthin/llama/args/: CacheType.java  CliArg.java  GpuSplitMode.java  LogFormat.java  MiroStat.java  ModelFlag.java  NumaStrategy.java  PoolingType.java  ReasoningFormat.java  RopeScalingType.java  Sampler.java
src/main/java/net/ladenthin/llama/json/: ChatResponseParser.java  CompletionResponseParser.java  ParameterJsonSerializer.java  RerankResponseParser.java
src/test/cpp/: test_jni_helpers.cpp  test_jni_server_helpers.cpp  test_json_helpers.cpp  test_server.cpp  test_utils.cpp
src/test/java/de/kherud/llama/: ChatAdvancedTest.java  ChatScenarioTest.java  ClaudeGenerated.java  ConfigureParallelInferenceTest.java  ErrorHandlingTest.java  InferenceParametersTest.java  JsonEndpointParametersTest.java  LlamaEmbeddingsTest.java  LlamaExceptionTest.java  LlamaLoaderTest.java  LlamaModelTest.java  LlamaOutputTest.java  LogLevelTest.java  MemoryManagementTest.java  ModelMetaTest.java  ModelParametersExtendedTest.java  ModelParametersTest.java  OSInfoTest.java  PairTest.java  RerankingModelTest.java  ResponseJsonStructureTest.java  StopReasonTest.java  TestConstants.java
src/test/java/de/kherud/llama/args/: CacheTypeTest.java  GpuSplitModeTest.java  LogFormatTest.java  MiroStatTest.java  ModelFlagTest.java  NumaStrategyTest.java  PoolingTypeTest.java  RopeScalingTypeTest.java  SamplerTest.java
src/test/java/de/kherud/llama/json/: ChatResponseParserTest.java  CompletionResponseParserTest.java  ParameterJsonSerializerTest.java  RerankResponseParserTest.java
src/test/java/examples/: ChatExample.java  GrammarExample.java  InfillExample.java  MainExample.java
src/test/java/net/ladenthin/llama/: CancellationTokenTest.java  ChatAdvancedTest.java  ChatResponseTest.java  ChatScenarioTest.java  ClaudeGenerated.java  ConfigureParallelInferenceTest.java  ContentPartTest.java  ErrorHandlingTest.java  InferenceParametersTest.java  JsonEndpointParametersTest.java  LlamaEmbeddingsTest.java  LlamaExceptionTest.java  LlamaLoaderTest.java  LlamaModelTest.java  LlamaOutputTest.java  LlamaPublisherTest.java  LoadProgressCallbackTest.java  LogLevelTest.java  MemoryManagementTest.java  ModelMetaTest.java  ModelParametersExtendedTest.java  ModelParametersTest.java  MultimodalIntegrationTest.java  MultimodalMessagesTest.java  NativeLibraryPermissionSetterTest.java  OSInfoTest.java  PairTest.java  ReasoningBudgetTest.java  RerankingModelTest.java  ResponseJsonStructureTest.java  ServerMetricsTest.java  SessionConcurrencyTest.java  StopReasonTest.java  TestConstants.java  TimingsTest.java  TokenLogprobTest.java  UsageTest.java
src/test/java/net/ladenthin/llama/args/: CacheTypeTest.java  GpuSplitModeTest.java  LogFormatTest.java  MiroStatTest.java  ModelFlagTest.java  NumaStrategyTest.java  PoolingTypeTest.java  RopeScalingTypeTest.java  SamplerTest.java
src/test/java/net/ladenthin/llama/json/: ChatResponseParserTest.java  CompletionResponseParserTest.java  ParameterJsonSerializerTest.java  RerankResponseParserTest.java
